--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Kit for HTML+SASS+PUG built by Jhon Mosk",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --mode development",  // запуск разработки
-    "build": "webpack --mode production"  // запуск сборки
+    "dev": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
