--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Kit for HTML+SASS+PUG built by Jhon Mosk",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --config webpack.dev.conf.js",
-    "build": "webpack --config webpack.build.conf.js"
+    "dev": "webpack-dev-server --open --config ./build/webpack.dev.conf.js",
+    "build": "webpack --config ./build/webpack.build.conf.js"
   },
   "repository": {
     "type": "git",
